# kursach

./: .gitignore  CMakeLists.txt  README.md
.github/workflow/: sonar.yml
.github/workflows/: sonar.yml
kursach/: kursach.qrc  kursach.ui  kursach.vcxproj  kursach.vcxproj.filters
kursach/headers/: Booking.h  BookingDialog.h  BookingService.h  CinemaException.h  CinemaHall.h  CinemaSystem.h  Customer.h  CustomerService.h  DateUtils.h  EmailValidator.h  HallDialog.h  HallMapDialog.h  MainWindow.h  Movie.h  MovieDialog.h  MovieService.h  Person.h  PriceFormatter.h  Session.h  SessionDialog.h  SessionService.h  Ticket.h
kursach/sources/: Booking.cpp  BookingDialog.cpp  BookingService.cpp  CinemaHall.cpp  CinemaSystem.cpp  Customer.cpp  CustomerService.cpp  HallDialog.cpp  HallMapDialog.cpp  MainWindow.cpp  Movie.cpp  MovieDialog.cpp  MovieService.cpp  Person.cpp  Session.cpp  SessionDialog.cpp  SessionService.cpp  Ticket.cpp  main.cpp
